@@ -76,9 +76,9 @@ $query_builder = TRUE;
 $db['default'] = array(
 	'dsn'	=> '',
 	'hostname' => 'localhost',
-	'username' => 'root',
-        'port' => '3306',
-	'password' => 'test',
+	'username' => '',
+        'port' => '',
+	'password' => '',
 	'database' => 'botcards',
 	'dbdriver' => 'mysqli',
 	'dbprefix' => '',
